# implicit-memory-system-poc

./: .env.example  .gitignore  CLAUDE.md  MIGRATION.md  PLAN.md  README.md  README_WEBUI.md  package-lock.json  package.json  pyproject.toml  run_nextjs.sh  run_nextjs_standalone.sh
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/config/: route.ts
app/api/models/: route.ts
app/api/prompts/: route.ts
app/api/sessions/: route.ts
backend/: main.py
backend/core/: conversation.py
components/: Chat.tsx  CurrentSessionBox.tsx  MEMOPConsole.tsx  MemoryBrowser.tsx  SessionDetailModal.tsx  SessionDiagramModal.tsx  Sessions.tsx  SettingsModal.tsx  ToolCallConsole.tsx
docs/: data-flow-sequence.md
frontend/: index.html
frontend/static/css/: custom.css
lib/: api.ts  utils.ts
lib/contexts/: MemoryContext.tsx  ToolCallContext.tsx
lib/hooks/: useMemoryOperationHandler.ts
lib/server/: async-event-queue.ts  conversation-manager.ts  global-state.ts  memory-operation-logger.ts  memory-tool.ts  session-trace.ts  session-utils.ts
nextjs-frontend/: .env.example  README.md  package-lock.json  package.json
nextjs-frontend/app/: layout.tsx  page.tsx
nextjs-frontend/components/: Chat.tsx  MemoryBrowser.tsx  Sessions.tsx
nextjs-frontend/lib/: api.ts  utils.ts
nextjs-frontend/types/: index.ts
prompts/: concise prompt.txt  concise prompt_explanatory.txt  more precise prompt.txt  more precise prompt_explanatory.txt
scripts/: generate_sequence_diagram.py
src/: __init__.py  chat.py  memory_tool.py
types/: index.ts
(+29 files in other folders)
