# Python dependencies for legacy CLI only
# The main Next.js app does not require Python

[project]
name = "memory-system-v2-cli"
version = "2.0.0"
description = "Legacy Python CLI for Memory System v2 (Next.js web UI is recommended)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = []
